<resources>
    <string name="app_name">IntentEx</string>

    <string name="app">App</string>
    <string name="settings">Settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="title_activity_settingsactivity">settingsactivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="addaccount">Add Account</string>
    <string name="title_activity_appactivity">appactivity</string>
</resources>
