<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gambal.intentex.settingsactivity"
    android:background="#fff10641">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/wifi"
            android:id="@+id/wifi_bt"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#ff000000"
            android:textColor="#ffffffff"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/bluetooth"
            android:id="@+id/bluetooth_bt"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#ff000000"
            android:textColor="#ffffffff"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/addaccount"
            android:id="@+id/addaccount_bt"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#ff000000"
            android:textColor="#ffffffff"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp" />
    </LinearLayout>
</RelativeLayout>
