<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="0"
        android:layout_alignParentEnd="false">

        <Button
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:text="@string/app"
            android:id="@+id/app_bt"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_alignParentEnd="false"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:text="@string/settings"
            android:id="@+id/setting_bt"
            android:layout_below="@+id/app_bt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="82dp"
            android:layout_alignParentEnd="false"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:text="@string/vibrate"
            android:id="@+id/vibrate_bt"
            android:layout_below="@+id/setting_bt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="95dp"
            android:layout_alignParentEnd="false"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
